--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Experiments</title>
 </head>
 <body>
   <h1>hello world</h1>
-  <h2>go go</h2>
+  <h2>GIT DEMO PAGE</h2>
+  <script src="app.js"></script>
 </body>
 </html>
